--- a/src/styles/blocks/_accordions.scss
+++ b/src/styles/blocks/_accordions.scss
@@ -7,7 +7,7 @@
   margin: 80px auto;
 
   .accordions__title {
-    @extend %title-h2;
+    @include title-h2;
   }
 
   .accordions__list {
@@ -27,10 +27,10 @@
       justify-content: space-between;
       min-height: 38px;
       border-bottom: 1px solid $dark-color-default;
-      @extend %silly-link;
+      @include silly-link;
 
       svg {
-        @extend %transition;
+        @include transition;
       }
 
       &:hover {
@@ -45,8 +45,8 @@
     }
   
     .accordion__title {
-      @extend %title-h4;
-      @extend %transition;
+      @include title-h4;
+      @include transition;
     }
   
     .accordion__container {
@@ -56,7 +56,7 @@
 
     .accordion__container {
       p {
-        @extend %text-lora;
+        @include text-lora;
         margin-bottom: 8px;
         &:last-of-type {
           margin-bottom: 0;
