--- a/src/styles/blocks/_auth.scss
+++ b/src/styles/blocks/_auth.scss
@@ -52,15 +52,15 @@
 }
 
 .auth__helplink {
-  @extend %text-circe-18;
-  @extend %black-link;
+  @include text-circe-18;
+  @include black-link;
   margin-right: 4px;
 }
 
 .auth__label {
   color:  $active-text-color;
-  @extend %text-circe-20;
-  @extend %transition;
+  @include text-circe-20;
+  @include transition;
 
   position: absolute;
   pointer-events: none;
@@ -77,9 +77,9 @@
 
 
 .auth__input {
-  @extend %silly-link;
-  @extend %text-circe-16; 
-  @extend %transition;
+  @include silly-link;
+  @include text-circe-16; 
+  @include transition;
 
   border-top: none;
   border-left: none;
@@ -142,7 +142,7 @@
   position: relative;
 	padding: 1px 5px 5px 5px;
 	box-sizing: content-box;
-  @extend %silly-link;
+  @include silly-link;
 
   /* Hover */
   input[type=checkbox]:hover {
@@ -189,7 +189,7 @@
 }
 
 .auth__check-description {
-  @extend %text-circe-18;
+  @include text-circe-18;
   color: $dark-color-default;
   padding: 0;
   margin: 0;
@@ -240,7 +240,7 @@
 
 /***************************************** КНОПКА ФОРМЫ *****************************************/
 .auth__button {
-  @extend %button;
+  @include button;
   max-width: 244px;
   width: 100%;
   margin: 40px auto 0;
@@ -261,7 +261,7 @@
 
 /***************************************** СООБЩЕНИЕ ОБ ОТПРАВКЕ *****************************************/
 .auth__message {
-  @extend %text-circe-18;
+  @include text-circe-18;
   margin: 40px auto ;
   width: 100%;
   text-align: center;
@@ -271,7 +271,7 @@
   padding: 0;
 
   h3 {
-    @extend %title-h3 ;
+    @include title-h3 ;
     color: $dark-color-default;
     margin: 0 0 16px ;
   }
