--- a/src/styles/blocks/_publications.scss
+++ b/src/styles/blocks/_publications.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
 
   .publications__title {
-    @extend %title-h2;
+    @include title-h2;
     margin-bottom: $spacer-m;
   }
 
@@ -66,8 +66,8 @@
   }
   
   .publication__type {
-    @extend %blue-link;
-    @extend %text-circe-20;
+    @include blue-link;
+    @include text-circe-20;
    
     max-width: 70%;
     text-overflow: ellipsis;
@@ -83,13 +83,13 @@
   }
   
   .publication__date {
-    @extend %text-circe-20;
+    @include text-circe-20;
     margin: 0;
     color: $primary-color-default;
   }
   
   .publication__img {
-    @extend %silly-link;
+    @include silly-link;
     aspect-ratio: 1/1;
     overflow: hidden;
     display: flex;
@@ -97,7 +97,7 @@
 
   
     img {
-      @extend %transition;
+      @include transition;
       object-fit: cover;
       width: 100%;
       transition: all .5s ease-in-out;
@@ -105,15 +105,15 @@
   }
     
   .publication__title {
-    @extend %title-h2;
+    @include title-h2;
   
     a {
-      @extend %black-link;
+      @include black-link;
     }
   }
   
   .publication__text {
-    @extend %text-lora;
+    @include text-lora;
   }
 }
 
