--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,13 +1,13 @@
 /*----------------------------------- titles -----------------------------------*/
-%titles-circe-uppercase {
+@mixin titles-circe-uppercase {
   font-family: 'Circe';
   font-style: normal;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-%giant-text {
-  @extend %titles-circe-uppercase;
+@mixin giant-text {
+  @include titles-circe-uppercase;
   font-size: 72px;
   line-height: 72px;
 
@@ -17,8 +17,8 @@
   }
 }
 
-%title-h1{
-  @extend %titles-circe-uppercase;
+@mixin title-h1{
+  @include titles-circe-uppercase;
    font-size: 42px;
    line-height: 52px;
 
@@ -29,8 +29,8 @@
 }
 
 
-%title-h2{
-  @extend %titles-circe-uppercase;
+@mixin title-h2{
+  @include titles-circe-uppercase;
   font-size: 26px;
   line-height: 34px;
 
@@ -40,20 +40,20 @@
   }
 }
 
-%title-h3 {
-  @extend %titles-circe-uppercase;
+@mixin title-h3 {
+  @include titles-circe-uppercase;
   font-size: 22px;
   line-height: 24px;
 }
 
-%title-h4 {
-  @extend %titles-circe-uppercase;
+@mixin title-h4 {
+  @include titles-circe-uppercase;
   font-size: 16px;
   line-height: 24px;
 }
 
-%cover-title {
-  @extend %titles-circe-uppercase;
+@mixin cover-title {
+  @include titles-circe-uppercase;
   font-size: 52px;
   line-height: 68px;
 
@@ -65,20 +65,20 @@
 
 /*----------------------------------- circe text -----------------------------------*/
 
-%text-circe {
+@mixin text-circe {
   font-family: 'Circe';
   font-style: normal;
   font-weight: 400;
 }
 
-%text-circe-20 {
-  @extend %text-circe;
+@mixin text-circe-20 {
+  @include text-circe;
   font-size: 20px;
   line-height: 24px;
 }
 
-%text-circe-18 {
-  @extend %text-circe;
+@mixin text-circe-18 {
+  @include text-circe;
   font-size: 18px;
   line-height: 24px;
 
@@ -88,27 +88,27 @@
   }
 }
 
-%text-circe-16 {
-  @extend %text-circe;
+@mixin text-circe-16 {
+  @include text-circe;
   font-size: 16px;
   line-height: 24px;
 }
 
-%text-circe-15 {
-  @extend %text-circe;
+@mixin text-circe-15 {
+  @include text-circe;
   font-size: 15px;
   line-height: 18px;
 }
 
-%text-circe-13 {
-  @extend %text-circe;
+@mixin text-circe-13 {
+  @include text-circe;
   font-size: 13px;
   line-height: 18px;
 }
 
 /*----------------------------------- lora text -----------------------------------*/
 
-%text-lora {
+@mixin text-lora {
   font-family: 'Lora';
   font-style: normal;
   font-weight: 400;
@@ -116,30 +116,30 @@
   line-height: 24px;
 }
 
-%text-lora-description {
-  @extend %text-lora;
+@mixin text-lora-description {
+  @include text-lora;
   font-style: italic;
   color: $middle-dark-color-default;
 }
 
 
 /*----------------------------------- custom cursor -----------------------------------*/
-%custom-cursor {
+@mixin custom-cursor {
   &:hover {
     cursor: url(../../images/icons/Cursor-hand.svg), pointer;
   }
 }
 
 /*----------------------------------- silly-link -----------------------------------*/
-%silly-link {
-  @extend %custom-cursor;
+@mixin silly-link {
+  @include custom-cursor;
   color: inherit;
   text-decoration: none;
 }
 
-%blue-link {
-  @extend %silly-link;
-  @extend %transition;
+@mixin blue-link {
+  @include silly-link;
+  @include transition;
 
   color: $primary-color-default;
   &:hover {
@@ -156,9 +156,9 @@
   }
 }
 
-%black-link {
-  @extend %silly-link;
-  @extend %transition;
+@mixin black-link {
+  @include silly-link;
+  @include transition;
 
   color: $dark-color-default;
   &:hover {
@@ -175,9 +175,9 @@
   }
 }
 
-%gray-link {
-  @extend %silly-link;
-  @extend %transition;
+@mixin gray-link {
+  @include silly-link;
+  @include transition;
 
   color: $middle-dark-color-default;
   &:hover {
@@ -196,7 +196,7 @@
 
 
 /*----------------------------------- transition -----------------------------------*/
-%transition {
+@mixin transition {
   -moz-transition-duration: $transition-timer;
   -o-transition-duration: $transition-timer;
   transition-duration: $transition-timer;
@@ -207,9 +207,9 @@
 }
 
 /*----------------------------------- buttons -----------------------------------*/
-%button {
-  @extend %custom-cursor;
-  @extend %transition;
+@mixin button {
+  @include custom-cursor;
+  @include transition;
   transition-property: color, background-color;
   text-decoration: none;
   text-align: center;
